2003/10/18
   fix
   1. copy text to both mouse key and clipboard

2003/10/16
   fix
   1. checking Python 2.3, 2.2
   
2003/9/27
	add
	1. play wave files using Arts, ESD, or external program.
	fix
	1. view->themes.
	2. display using variable fonts.

2003/7/7
	add
	1. QTermTelnet emit TSWRITED when called write(). Use this signal to
	restart antiIdle timer instead of mouse & key pressing
	
2003/7/6
	add
	1. extract python traceback info

2003/7/3
	fix
	1. CPU overload when copy article

2003/6/25
	fix
	1. Makefile error
	
	0.3.1 released
	
2003/6/21
	0.3.0 released

2003/6/3
	add
	1. tray icon

2003/5/30
	add
	1. python script support

2003/5/8
	fix
	1. font set from menu(toolbar) will override the antialias property

2003/4/16
	fix
	1. autoreply cant be enabled if not enabled in Setting
	
2003/4/12
	0.2.0 released

2003/4/7
	add
	1. varible in address book for autoreply
	2. support url format usr:pwd@addr:port
	fix
	1. problem when copy article at ytht.net

2003/4/2
	add
	1. strip out the whitespace when copy

2003/3/28
	add
	1. logo icon

2003/3/25
	add
	1. strip out the whitespace when copy article
	fix
	1. system() try to break URL at '&', avoided by double quotation
	2. copy article problem
	
2003/3/22
	0.2.0pre2
	
2003/3/21
	fix
	1. word wrap 
	2. autologin

2003/3/19
	add
	1. new designed message dialog
	fix
	1. copy article problem for 0.2.0pre1

2003/3/15
	add
	1. reconnect # seconds after disconnected by host in maxmimum # times
	fix
	1. clipbard problem, copy to/paste from non-Qt software

2003/3/14
	add
	1. HTTP proxy support

2003/2/15
	fix
	1. QTermWindow::idleProcess: stop blinking after replyMessage

2003/2/14
	fix
	1. QTermScreen::refreshScreen: blink flag missing when partially refreshed.

2003/1/24
	fix
	1. QTermFrame::homepage:  exec web browser without ' &' ending in Windowsz.
	2. QTermScreen::scrollLine: stop scrolling at the start or end
	
20031/1/22
	add
	1. load default setting for quick login instead of the hard coded one
	fix